server add get service detail api and update pkg version (#39)
