# server/smserver/etcd.go
@@ -81,11 +81,20 @@ func (n *nodeManager) nodeServiceWorker(appService, workerGroup, worker string) 
 	return fmt.Sprintf("%s/%s/%s", n.nodeServiceWorkerGroup(appService), workerGroup, worker)
 }
 
-// getWorkerGroupAndContainerByEtcdPath /sm/app/foo.bar/service/foo.bar/workerpool/g1/127.0.0.1:8801
+// parseWorkerGroupAndContainer /sm/app/foo.bar/service/foo.bar/workerpool/g1/127.0.0.1:8801
 func (n *nodeManager) parseWorkerGroupAndContainer(path string) (string, string) {
 	arr := strings.Split(path, "/")
 	if len(arr) >= 2 {
 		return arr[len(arr)-2], arr[len(arr)-1]
 	}
 	return "", ""
+}
+
+// parseWorkerGroupAndContainer /sm/app/foo.bar/containerhb/127.0.0.1:8801/694d818416078d06
+func (n *nodeManager) parseContainer(hbPath string) string {
+	arr := strings.Split(hbPath, "/")
+	if len(arr) >= 2 {
+		return arr[len(arr)-2]
+	}
+	return ""
 }
